Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,21 @@
 
 \maketitle
 
-\section{Introduction}
+\section*{Assignment}
+\begin{enumerate}
+    \item How were the various banks attacked? Why was the attack on CBB successful? Was it different in the case of other banks?
+    \item How did the series of attacks impact on the banks involved and on the SWIFT system?
+    \item What type of solutions you could envisage to guarantee the correct working of this critical infrastructure of global financial markets?
+\end{enumerate}
+
+\section{The attacks}
+\subsection{First attack}
+\subsection{Second attack}
+\subsection{Third attack}
+\subsection{Fourth attack}
+
+\section{The consequences}
+
+\section{The solutions}
 
 \end{document}
